# time_manager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  signing.md
.github/workflows/: cmake-multi-platform.yml
cmake/: metadata.json.in  time_manager.pc.in  time_manager.rc.in  time_managerConfig.cmake.in
include/time_manager/: time_manager.h  time_manager_export.h
include/time_manager/utils/: time_utils.h
src/: time_manager.c  time_utils.c
tests/: CMakeLists.txt  test_time_manager.c
